@@ -20,7 +20,7 @@ collective.recaptcha = 1.0.1
 collective.recipe.backup = 2.1
 collective.recipe.i18noverrides = 0.4
 collective.recipe.omelette = 0.9
-collective.recipe.supervisor = 0.17
+collective.recipe.supervisor = 0.19
 collective.recipe.template = 1.8
 collective.recipe.z2testrunner = 0.3.1
 distribute = 0.6.10
@@ -53,8 +53,8 @@ reportlab = 2.5
 roadrunner = 0.2.2
 setuptools = 0.6c11
 simplejson = 2.1.5
-superlance = 0.5
-supervisor = 3.0a12
+superlance = 0.7
+supervisor = 3.0b1
 threadframe = 0.2
 varnish-url = http://pypi.zestsoftware.nl/tgz/varnish-2.1.5.tar.gz
 z3c.recipe.usercrontab = 1.1
